Fixed image dispaly problem, cleaned up the way the sections display, realigned page elements.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ html {
   scroll-behavior: smooth;
 }
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   font-family: "Courier New", Courier, monospace;
@@ -13,8 +15,9 @@ body {
   );
 }
 nav {
-  width: 100%;
-  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
   position: sticky;
   background-color: rgb(255, 255, 116);
   top: 0;
@@ -36,6 +39,50 @@ a {
   text-transform: uppercase;
   font-weight: bold;
 }
+img {
+  height: 300px;
+  width: 300px;
+  border: 50px;
+  border-color: white;
+}
 #pg1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
   height: 700px;
+  width: 100%;
+}
+
+#pg2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 700px;
+  width: 100%;
+}
+
+#pg3 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: center;
+  height: 700px;
+  width: 100%;
+}
+
+#pg4 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-content: center;
+  height: 700px;
+  width: 100%;
+}
+.cmtitle {
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
